# sawagani

./: .gitignore  AGENTS.md  README.md  agent.py  config.example.toml  config.py  main.py  pyproject.toml
src/sawagani/: __init__.py  __main__.py  agent.py  bootstrap.py  cli.py  config.py  daemon.py  discord_bot.py  schedule.py  scheduler.py  settings.py  tasks.py
tests/: test_agent.py  test_bootstrap.py  test_cli.py  test_config.py  test_daemon.py  test_discord_bot.py  test_main.py  test_schedule.py  test_scheduler.py  test_settings.py  test_tasks.py
