[project]
name = "sawagani"
version = "0.1.0"
description = "軽量なLLMエージェント（Claude Agent SDK によるハートビート駆動エージェント）"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# プロジェクトルートを import パスに含め、tests/ をテスト対象にする
pythonpath = ["."]
testpaths = ["tests"]
