[project]
name = "sawagani"
version = "0.1.0"
description = "軽量なLLMエージェント（Claude Agent SDK によるハートビート駆動エージェント）"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "discord-py",
]

[project.scripts]
sawagani = "sawagani.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sawagani"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty",
]

[tool.pytest.ini_options]
# src-layout: インストール済みパッケージに対してテストする（pythonpath ハックは不要）
testpaths = ["tests"]
